--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -552,7 +552,7 @@ $menu-bg:                         #fff !default;
 $menu-width:                      275px !default;
 $menu-animation-speed:            200ms !default;
 
-$menu-side-shadow:                -1px 0px 2px rgba(0, 0, 0, 0.2), 1px 0px 2px rgba(0,0,0,0.2) !default;
+$menu-side-shadow:                0px 0px 3px rgba(0, 0, 0, 0.2) !default;
 
 
 // Modals
