Disable  animations to allow correct count of slides

--- a/scss/_slide-box.scss
+++ b/scss/_slide-box.scss
@@ -23,6 +23,17 @@
   width: 100%;
   height: 100%;
   vertical-align: top;
+  //Disable animations
+  &.ng-enter,
+  &.ng-leave,
+  &.ng-animate {
+    -webkit-transition: none !important;
+    transition: none !important;
+  }
+  &.ng-animate {
+    -webkit-animation: none 0s;
+    animation: none 0s;
+  }
 }
 
 .slider-slide-image {
