feat(list): add list-inline class for inline lists

--- a/scss/_items.scss
+++ b/scss/_items.scss
@@ -107,6 +107,11 @@
   border-width: 0;
 }
 
+.list.list-inline .item {
+  @include flex();
+  font-size: inherit;
+}
+
 // Link and Button Active States
 .item.active,
 .item.activated,
