--- a/scss/_list.scss
+++ b/scss/_list.scss
@@ -18,6 +18,11 @@
   }
 }
 
+.list.list-inline {
+  @include display-flex();
+  @include flex-direction(row);
+  width: 100%;
+}
 
 /**
  * List Header
