Disable animations for .slider-slide and .slider-pager-page

--- a/scss/_slide-box.scss
+++ b/scss/_slide-box.scss
@@ -23,17 +23,6 @@
   width: 100%;
   height: 100%;
   vertical-align: top;
-  //Disable animations
-  &.ng-enter,
-  &.ng-leave,
-  &.ng-animate {
-    -webkit-transition: none !important;
-    transition: none !important;
-  }
-  &.ng-animate {
-    -webkit-animation: none 0s;
-    animation: none 0s;
-  }
 }
 
 .slider-slide-image {
@@ -63,5 +52,20 @@
       @include transition(opacity 0.4s ease-in);
       opacity: 1;
     }
+  }
+}
+
+//Disable animate service animations
+.slider-slide,
+.slider-pager-page {
+  &.ng-enter,
+  &.ng-leave,
+  &.ng-animate {
+    -webkit-transition: none !important;
+    transition: none !important;
+  }
+  &.ng-animate {
+    -webkit-animation: none 0s;
+    animation: none 0s;
   }
 }
