fix padding bottom
Hi the selct always cut text with "g" or "q" etc

--- a/scss/_select.scss
+++ b/scss/_select.scss
@@ -12,7 +12,7 @@
     position: absolute;
     top: 0;
     right: 0;
-    padding: ($item-padding - 2) ($item-padding * 3) ($item-padding) $item-padding;
+    padding: ($item-padding - 2) ($item-padding * 3) ($item-padding - 6) $item-padding;
     max-width: 65%;
 
     border: none;
