Fix padding for action sheet in android

--- a/scss/_action-sheet.scss
+++ b/scss/_action-sheet.scss
@@ -135,6 +135,7 @@
       border-color: transparent;
       font-size: 16px;
       color: inherit;
+      padding: 0 12px;
     }
 
     .action-sheet-title {
