fix(textarea): iOS text indent. Closes #2307

--- a/scss/_form.scss
+++ b/scss/_form.scss
@@ -215,6 +215,9 @@ input[type="color"] {
   input[type="week"] {
     padding-top: 8px;
   }
+  textarea {
+    text-indent: -3px;
+  }
 }
 
 .item-input {
