feat(scrollViewNative): implement native scroll freeze
fixes https://github.com/driftyco/ionic/issues/4743

--- a/scss/_scaffolding.scss
+++ b/scss/_scaffolding.scss
@@ -202,6 +202,10 @@ ion-infinite-scroll {
   }
 }
 
+.overflow-scroll-freeze {
+  -webkit-overflow-scrolling: auto !important;
+  overflow-y: hidden !important;
+}
 
 // Pad top/bottom of content so it doesn't hide behind .bar-title and .bar-tab.
 // Note: For these to work, content must come after both bars in the markup
