Fully style range inputs in Firefox
Replace platform-native appearance with Ionic styling.

--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -126,6 +126,9 @@
   &::-ms-fill-lower{
     background: $track-bg-color;
   }
+  &::-moz-range-progress {
+    background: $track-bg-color;
+  }
 }
 
 
