Unset 'background' property for range-input in Firefox.
Not needed because '-moz-range-track' draws the same element.
Could become misaligned in some cases, e.g. within item-stacked-label.

--- a/scss/_range.scss
+++ b/scss/_range.scss
@@ -174,10 +174,11 @@
 }
 
 @-moz-document url-prefix() {
-// Prevents thumb from being clipped in Firefox
-// Can't be set generally, would cause (hacky) webkit fill to overflow
+// Hidden overflow clips the thumb on Firefox, but causes (hacky) Webkit
+// filling to overflow. Background unneeded for FF and can become misaligned.
   .range input {
     overflow: visible;
+    background: none;
   }
 }
 
