--- a/scss/_scaffolding.scss
+++ b/scss/_scaffolding.scss
@@ -36,6 +36,7 @@ body,
   color: $base-color;
   word-wrap: break-word;
   font-size: $font-size-base;
+  font-family: -apple-system;
   font-family: $font-family-base;
   line-height: $line-height-computed;
   text-rendering: optimizeLegibility;
