--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -3,8 +3,7 @@
 // --------------------------------------------------
 
 @mixin button-style($bg-color, $border-color, $active-bg-color, $active-border-color, $color) {
-  border-color: $border-color;
-
+  border-color: transparent;//$border-color;
   background-color: $bg-color;
   color: $color;
 
@@ -15,8 +14,9 @@
   }
   &.active,
   &.activated {
-    border-color: $active-border-color;
+    //border-color: transparent;//$active-border-color;
     background-color: $active-bg-color;
+    //box-shadow: inset 0 1px 4px rgba(0,0,0,0.1);
   }
 }
 
