--- a/scss/_bar.scss
+++ b/scss/_bar.scss
@@ -366,6 +366,11 @@
   &.item-input-inset {
     position: absolute;
   }
+
+  .title {
+    height: $bar-footer-height - 1;
+    line-height: $bar-footer-height;
+  }
 }
 
 // Don't render padding if the bar is just for tabs
@@ -378,12 +383,22 @@
   display: block;
 
   height: $bar-subheader-height;
+
+  .title {
+    height: $bar-subheader-height - 1;
+    line-height: $bar-subheader-height;
+  }
 }
 .bar-subfooter {
   bottom: $bar-footer-height;
   display: block;
 
   height: $bar-subfooter-height;
+
+  .title {
+    height: $bar-subfooter-height - 1;
+    line-height: $bar-subfooter-height;
+  }
 }
 
 .nav-bar-block {
