Update _mixins.scss with Keyframes Mixins

--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -349,6 +349,18 @@
 }
 
 
+// Keyframes Mixins
+// --------------------------------------------------
+
+@mixin keyframes($name) {
+  @-webkit-keyframes #{$name} { @content; };
+  @-moz-keyframes #{$name} { @content; };
+  @-ms-keyframes #{$name} { @content; };
+  @-o-keyframes #{$name} { @content; };
+  @keyframes #{$name} { @content; };
+}
+
+
 // Animation Mixins
 // --------------------------------------------------
 
