--- a/scss/_refresher.scss
+++ b/scss/_refresher.scss
@@ -92,22 +92,12 @@
 .overflow-scroll.padding > .scroll.overscroll{
     padding: 10px;
 }
-@-webkit-keyframes refresh-spin {
-  0%   { -webkit-transform: translate3d(0,0,0) rotate(0); }
-  100% { -webkit-transform: translate3d(0,0,0) rotate(180deg); }
+@include keyframes(refresh-spin) {
+  0% { @include transform(translate3d(0,0,0) rotate(0)); }
+  100% { @include transform(translate3d(0,0,0) rotate(180deg)); }
 }
 
-@keyframes refresh-spin {
-  0%   { transform: translate3d(0,0,0) rotate(0); }
-  100% { transform: translate3d(0,0,0) rotate(180deg); }
-}
-
-@-webkit-keyframes refresh-spin-back {
-  0%   { -webkit-transform: translate3d(0,0,0) rotate(180deg); }
-  100% { -webkit-transform: translate3d(0,0,0) rotate(0); }
-}
-
-@keyframes refresh-spin-back {
-  0%   { transform: translate3d(0,0,0) rotate(180deg); }
-  100% { transform: translate3d(0,0,0) rotate(0); }
+@include keyframes(refresh-spin-back) {
+  0% { @include transform(translate3d(0,0,0) rotate(180deg)); }
+  100% { @include transform(translate3d(0,0,0) rotate(0)); }
 }
