--- a/scss/_form.scss
+++ b/scss/_form.scss
@@ -158,12 +158,11 @@ textarea {
 
 .item-select.item-stacked-label select {
   position: relative;
-  padding: 0px;
+  padding: 4px 0 3px 0;
   max-width: 90%;
-  direction:ltr;
+  direction: ltr;
   white-space: pre-wrap;
-  margin: -3px;
-}
+  }
 
 .item-floating-label {
   display: block;
