Add swipable items to ionList - poc

--- a/scss/_items.scss
+++ b/scss/_items.scss
@@ -823,3 +823,12 @@ button.item.item-button-right {
     }
   }
 }
+
+.item-swipe {
+  position: absolute;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  z-index: 1;
+ }
