Remove Ionicons Sass aliases
This:

```
@import "ionicons-icons";
@import "ionicons-variables";
```

cannot work without aliases defined in `ionic.config.js` or webpack or any tool you want to use to compile your Sass.

Why not using directly the right path? We could avoid errors like that:

```
Module build failed:
@import "ionicons-variables";
^
      File to import not found or unreadable: ionicons-variables
```

--- a/ionic/fonts/ionicons.scss
+++ b/ionic/fonts/ionicons.scss
@@ -6,8 +6,8 @@
 
 $ionicons-font-path: $font-path !default;
 
-@import "ionicons-icons";
-@import "ionicons-variables";
+@import "~ionicons/dist/scss/ionicons-icons";
+@import "~ionicons/dist/scss/ionicons-variables";
 
 
 @font-face {
