--- a/core/src/components/accordion-group/accordion-group.scss
+++ b/core/src/components/accordion-group/accordion-group.scss
@@ -1,3 +1,8 @@
+@import "../../themes/ionic.globals";
+
+// Accordion Group
+// --------------------------------------------------
+
 :host {
   display: block;
 }
