--- a/core/src/components/accordion/accordion.scss
+++ b/core/src/components/accordion/accordion.scss
@@ -1,5 +1,8 @@
 @import "./accordion.vars.scss";
 
+// Accordion
+// --------------------------------------------------
+
 :host {
   display: block;
 
