--- a/core/src/components/accordion-group/accordion-group.ios.scss
+++ b/core/src/components/accordion-group/accordion-group.ios.scss
@@ -1,3 +1,8 @@
+@import "./accordion-group";
+
+// iOS Accordion Group
+// --------------------------------------------------
+
 :host(.accordion-group-expand-inset) ::slotted(ion-accordion.accordion-expanding),
 :host(.accordion-group-expand-inset) ::slotted(ion-accordion.accordion-expanded) {
   border-bottom: none;
