--- a/core/src/components/accordion/test/a11y/index.html
+++ b/core/src/components/accordion/test/a11y/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Accordion - a11y</title>
     <meta name="viewport"
-      content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
+      content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
     <link href="../../../../../css/ionic.bundle.css" rel="stylesheet">
     <link href="../../../../../scripts/testing/styles.css" rel="stylesheet">
     <script src="../../../../../scripts/testing/scripts.js"></script>
@@ -13,12 +13,8 @@
 
   <body>
     <ion-app>
-      <ion-header>
-        <ion-toolbar>
-          <ion-title>Accordion Group - a11y</ion-title>
-        </ion-toolbar>
-      </ion-header>
       <ion-content class="ion-padding">
+        <h1>Accordion Group - a11y</h1>
 
         <ion-accordion-group expand="inset">
           <ion-accordion value="personal-information">
