add to basic test

--- a/core/src/components/accordion/test/basic/index.html
+++ b/core/src/components/accordion/test/basic/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Accordion - Basic</title>
     <meta name="viewport"
-      content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
+      content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
     <link href="../../../../../css/ionic.bundle.css" rel="stylesheet">
     <link href="../../../../../scripts/testing/styles.css" rel="stylesheet">
     <script src="../../../../../scripts/testing/scripts.js"></script>
@@ -26,6 +26,7 @@
         </ion-toolbar>
       </ion-header>
       <ion-content fullscreen="true" color="light">
+        <h1>Accordion Group - Basic</h1>
         <ion-header collapse="condense">
           <ion-toolbar color="light">
             <ion-title size="large">Topics</ion-title>
