Ajuste logica header

--- a/core/src/components/megrupo/med-navbar/med-navbar.scss
+++ b/core/src/components/megrupo/med-navbar/med-navbar.scss
@@ -40,8 +40,8 @@
     display: flex;
     align-items: center;
     text-align: center;
-    padding-left: var(--padding-left);
-    padding-right: var(--padding-right);
+    margin-left: var(--margin-left);
+    margin-right: var(--margin-right);
   }
 }
 
