Implementação button e header

--- a/core/src/components/button/med/med-button.scss
+++ b/core/src/components/button/med/med-button.scss
@@ -1,5 +1,5 @@
 @import "../../../themes/ionic.globals";
-@import "../../../../med-components/src/tokens/global/global";
+@import "../../../../med-components/variables";
 
 :host {
   // tokens
@@ -23,6 +23,7 @@
   --med-line-height: #{$med-line-height-compressed};
   --med-color: #{$med-color-neutral-light-prime};
   --med-color-secondary: #{$med-color-brand-primary-light};
+  --med-color-tertiary: #{$med-color-neutral-light-prime};
   --med-text-transform: uppercase;
   --med-transition: all 100ms ease-out;
   --med-overflow: hidden;
@@ -44,11 +45,6 @@
   vertical-align: -webkit-baseline-middle; // the best for those that support it
   pointer-events: auto;
   font-kerning: none;
-
-  .center {
-    display: flex;
-    align-items: center;
-  }
 
   .button-native {
     @include font-smoothing();
@@ -152,7 +148,6 @@
 // focused
 :host(.ion-focused) {
   .button-native {
-
     &::before {
       background: var(--med-background-focused);
       opacity: 1;
@@ -164,10 +159,6 @@
 // hover
 @media (any-hover: hover) {
   :host(:hover) {
-    .button-native {
-      //background: var(--med-background-hover);
-    }
-
     .button-native::before {
       opacity: 1;
       background: var(--med-background-hover);
